--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ucsc-email-templates",
   "version": "1.0.0",
   "description": "UC Santa Cruz Email Templates",
-  "main": "index.js",
+  "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/luckyluke007/ucsc-email-templates#readme",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-litmus": "^0.1.8",
     "grunt-premailer": "^0.2.13"
   }
