--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 gems: ['jekyll-assets']
 
 
-title: UC Santa Cruz Email Templates
+#title: UC Santa Cruz Email Templates
 email: ttran34@ucsc.edu
 description: UC Santa Cruz Email Templates
 url: "http://luckyluke007.github.io/ucsc-email-templates/build"
